# WUT-PSI-LAB

./: README.md
TCP-zad2/CPP/: CMakeLists.txt  client-solution.cpp  server-solution.cpp
TCP-zad2/CPP/include/: client.hpp  server.hpp
TCP-zad2/CPP/source/: client.cpp  server.cpp
TCP-zad2/Python/: client.py  client_2.2.py  server.py  server_2.2.py
UDP-zad1/CPP/: client  client.cpp  server  server.cpp
UDP-zad1/Python/: clientudp.py  serverudp.py
