cmake_minimum_required(VERSION 3.16)
set(FLAGS -std=c++17 -O3 -Wall -g)
set(CMAKE_CXX_COMPILER clang)
# set(CMAKE_BUILD_TYPE Debug)
add_compile_options(${FLAGS})
set(CMAKE_CXX_COMPILER g++)
project(PSI_LAB2 VERSION 0.1 LANGUAGES CXX)
file(GLOB_RECURSE SRC ${CMAKE_SOURCE_DIR}/source/*.cpp)
add_executable(program main.cpp ${SRC})
target_include_directories(program PUBLIC BEFORE ${CMAKE_SOURCE_DIR}/include)